--- a/app/src/main/res/layout/activity_dept_wise_faculty_infor.xml
+++ b/app/src/main/res/layout/activity_dept_wise_faculty_infor.xml
@@ -4,18 +4,433 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Dept_Wise_Faculty_Infor">
+    android:orientation="vertical"
+    tools:context=".DeptWiseFacultyInfo">
 
-    <LinearLayout
+
+
+    <Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:title="Faculty Information"
+        android:titleTextColor="@color/white"
+        android:background="@color/primary_color"
+        android:id="@+id/fhToolbar"
+
+        />
 
 
+    <!--    <TextView-->
+    <!--        android:id="@+id/text_book_upload"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="Upload Books"-->
+    <!--        android:textSize="20sp"-->
+    <!--        android:textStyle="bold"-->
+    <!--        android:layout_margin="10dp" -->
+    <!--        android:textAlignment="center"-->
+    <!--        />-->
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        >
 
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+
+            >
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_title5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Faculty Name :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="Prof. Himanshu Mokashe "
+                    android:hint="Prof. Himanshu Mokashe "
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_author1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Department :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_author"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="IT"
+                    android:hint="Enter book author"
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_author34"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contact No. :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_author24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="8770201998"
+                    android:hint="Enter book author"
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/button_upload_book44"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Faculty Details"
+                android:layout_margin="10dp"
+                android:onClick="uploadBook" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_title74"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Faculty Name :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_title1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="Prof. Samiksha Shukla "
+                    android:hint="Prof. Samiksha Shukla "
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_author121"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Department :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_author1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="IT"
+                    android:hint="Enter book author"
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_author21"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contact No. :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_author21"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="9770832766"
+                    android:hint="Enter book author"
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/button_upload_book12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Faculty Details"
+                android:layout_margin="10dp"
+                android:onClick="uploadBook" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_title121"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Faculty Name :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_title2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="Prof. Priyanka Sahu "
+                    android:hint="Prof. Priyanka Sahu "
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Department :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_author2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="IT"
+                    android:hint="Enter book author"
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_author2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contact No. :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_author22"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="7828071147"
+                    android:hint="Enter book author"
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/button_upload_book"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Faculty Details"
+                android:layout_margin="10dp"
+                android:onClick="uploadBook" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Faculty Name :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_title3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="Prof. Kunal Kumar "
+                    android:hint="Prof. Kunal Kumar "
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_author5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Department :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_author3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="IT"
+                    android:hint="Enter book author"
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/text_book_author3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contact No. :"
+                    android:textSize="18sp"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:id="@+id/edit_book_author23"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:text="8085273680"
+                    android:hint="Enter book author"
+                    android:layout_margin="10dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/button_upload_book4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Faculty Details"
+                android:layout_margin="10dp"
+                android:onClick="uploadBook" />
+
+        </LinearLayout>
+
+
+    </ScrollView>
 
 </LinearLayout>
+
+
+
