--- a/app/src/main/res/layout/activity_faculty_civil.xml
+++ b/app/src/main/res/layout/activity_faculty_civil.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FacultyActivity">
+    tools:context=".FacultyActivityCivil">
 
     <Toolbar
         android:layout_width="match_parent"
@@ -67,7 +67,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="Prof. Awanish Kumar Upadhyay "
+                            android:text="Prof. Dr. Seema Chouhan "
                             android:hint="Prof. Himanshu Mokashe "
                             android:layout_margin="10dp" />
 
@@ -92,7 +92,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="Civil"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -116,7 +116,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="9893110221"
+                            android:text="9827111977"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -175,14 +175,15 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_title"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="Prof. Himanshu Mokashe "
+                            android:layout_margin="10dp"
                             android:hint="Prof. Himanshu Mokashe "
-                            android:layout_margin="10dp" />
+                            android:inputType="text"
+                            android:text="Prof. Aditya Singh "
+                            android:textSize="18sp"
+                            tools:ignore="TouchTargetSizeCheck" />
 
                     </LinearLayout>
 
@@ -201,14 +202,15 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="IT"
+                            android:layout_margin="10dp"
                             android:hint="Enter book author"
-                            android:layout_margin="10dp" />
+                            android:inputType="text"
+                            android:text="Civil"
+                            android:textSize="18sp"
+                            tools:ignore="TouchTargetSizeCheck" />
 
                     </LinearLayout>
                     <LinearLayout
@@ -226,14 +228,15 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author24"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="8770201998"
+                            android:layout_margin="10dp"
                             android:hint="Enter book author"
-                            android:layout_margin="10dp" />
+                            android:inputType="text"
+                            android:text="9406044432"
+                            android:textSize="18sp"
+                            tools:ignore="TouchTargetSizeCheck" />
 
                     </LinearLayout>
 
@@ -282,7 +285,7 @@
                         android:layout_marginTop="@dimen/_5sdp">
 
                         <TextView
-                            android:id="@+id/text_book_title74"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Faculty Name :"
@@ -290,13 +293,13 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_title1"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
-                            android:hint="Prof. Samiksha Shukla "
+                            android:hint="Prof. Saurabh Yadav "
                             android:inputType="text"
-                            android:text="Prof. Samiksha Shukla "
+                            android:text="Prof. Nidhi Suryawanshi "
                             android:textSize="18sp" />
 
                     </LinearLayout>
@@ -316,14 +319,15 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author1"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="IT"
+                            android:layout_margin="10dp"
                             android:hint="Enter book author"
-                            android:layout_margin="10dp" />
+                            android:inputType="text"
+                            android:text="Civil"
+                            android:textSize="18sp"
+                            tools:ignore="TouchTargetSizeCheck" />
 
                     </LinearLayout>
                     <LinearLayout
@@ -341,12 +345,12 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author21"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="9770832766"
+                            android:text="9144794405"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -398,7 +402,7 @@
                         android:layout_marginTop="@dimen/_5sdp">
 
                         <TextView
-                            android:id="@+id/text_book_title121"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Faculty Name :"
@@ -406,14 +410,14 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_title2"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:hint="Prof. Saurabh Yadav "
                             android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="Prof. Priyanka Sahu "
-                            android:hint="Prof. Priyanka Sahu "
-                            android:layout_margin="10dp" />
+                            android:text="Prof. Priyam Jain "
+                            android:textSize="18sp" />
 
                     </LinearLayout>
 
@@ -424,7 +428,7 @@
                         android:gravity="center">
 
                         <TextView
-                            android:id="@+id/text_book_author"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Department :"
@@ -432,12 +436,12 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author2"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="Civil"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -449,7 +453,7 @@
                         android:gravity="center">
 
                         <TextView
-                            android:id="@+id/text_book_author2"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Contact No. :"
@@ -457,12 +461,12 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author22"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="7828071147"
+                            android:text="7869091983"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -477,6 +481,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center"/>
+
 
 
 
@@ -513,7 +518,7 @@
                         android:layout_marginTop="@dimen/_5sdp">
 
                         <TextView
-                            android:id="@+id/text_book_title"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Faculty Name :"
@@ -521,14 +526,14 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_title3"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:hint="Prof. Saurabh Yadav "
                             android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="Prof. Kunal Kumar "
-                            android:hint="Prof. Kunal Kumar "
-                            android:layout_margin="10dp" />
+                            android:text="Prof. Tanuja Gupta "
+                            android:textSize="18sp" />
 
                     </LinearLayout>
 
@@ -539,7 +544,7 @@
                         android:gravity="center">
 
                         <TextView
-                            android:id="@+id/text_book_author5"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Department :"
@@ -547,12 +552,12 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author3"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="Civil"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -564,7 +569,7 @@
                         android:gravity="center">
 
                         <TextView
-                            android:id="@+id/text_book_author3"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Contact No. :"
@@ -572,12 +577,12 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author23"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="8085273680"
+                            android:text="7869091983"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -592,6 +597,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center"/>
+
 
 
 
@@ -602,6 +608,7 @@
 
 
             </androidx.cardview.widget.CardView>
+
 
         </LinearLayout>
 
