--- a/app/src/main/res/layout/activity_faculty_et.xml
+++ b/app/src/main/res/layout/activity_faculty_et.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FacultyActivity">
+    tools:context=".FacultyActivityET">
 
     <Toolbar
         android:layout_width="match_parent"
@@ -67,7 +67,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="Prof. Awanish Kumar Upadhyay "
+                            android:text="Prof. Dr. K.K. Saxena "
                             android:hint="Prof. Himanshu Mokashe "
                             android:layout_margin="10dp" />
 
@@ -92,7 +92,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="ET&amp;T"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -116,7 +116,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="9893110221"
+                            android:text="9424169287"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -180,7 +180,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="Prof. Himanshu Mokashe "
+                            android:text="Prof. Umashankar Dewangan "
                             android:hint="Prof. Himanshu Mokashe "
                             android:layout_margin="10dp" />
 
@@ -206,7 +206,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="ET&amp;T"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -231,7 +231,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="8770201998"
+                            android:text="9981293105"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -282,7 +282,7 @@
                         android:layout_marginTop="@dimen/_5sdp">
 
                         <TextView
-                            android:id="@+id/text_book_title74"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Faculty Name :"
@@ -290,13 +290,13 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_title1"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
-                            android:hint="Prof. Samiksha Shukla "
+                            android:hint="Prof. Saurabh Yadav "
                             android:inputType="text"
-                            android:text="Prof. Samiksha Shukla "
+                            android:text="Prof. Saurabh Yadav "
                             android:textSize="18sp" />
 
                     </LinearLayout>
@@ -321,7 +321,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="ET&amp;T"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -341,12 +341,12 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author21"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="9770832766"
+                            android:text="8871089917"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -398,7 +398,7 @@
                         android:layout_marginTop="@dimen/_5sdp">
 
                         <TextView
-                            android:id="@+id/text_book_title121"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Faculty Name :"
@@ -406,14 +406,14 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_title2"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:hint="Prof. Saurabh Yadav "
                             android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="Prof. Priyanka Sahu "
-                            android:hint="Prof. Priyanka Sahu "
-                            android:layout_margin="10dp" />
+                            android:text="Prof. Jamuna Kaushik "
+                            android:textSize="18sp" />
 
                     </LinearLayout>
 
@@ -424,7 +424,7 @@
                         android:gravity="center">
 
                         <TextView
-                            android:id="@+id/text_book_author"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Department :"
@@ -432,12 +432,12 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author2"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="ET&amp;T"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -449,7 +449,7 @@
                         android:gravity="center">
 
                         <TextView
-                            android:id="@+id/text_book_author2"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Contact No. :"
@@ -457,12 +457,12 @@
                             android:layout_margin="10dp" />
 
                         <TextView
-                            android:id="@+id/edit_book_author22"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="7828071147"
+                            android:text="9301296016"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -477,6 +477,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center"/>
+
 
 
 
@@ -487,121 +488,7 @@
 
 
             </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="1.1in"
-                android:layout_margin="7dp"
-                app:cardElevation="5dp"
-                app:cardCornerRadius="8dp"
-                app:cardBackgroundColor="@color/white">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-
-                    >
-
-
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:layout_marginTop="@dimen/_5sdp">
-
-                        <TextView
-                            android:id="@+id/text_book_title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Faculty Name :"
-                            android:textSize="18sp"
-                            android:layout_margin="10dp" />
-
-                        <TextView
-                            android:id="@+id/edit_book_title3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="Prof. Kunal Kumar "
-                            android:hint="Prof. Kunal Kumar "
-                            android:layout_margin="10dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-
-                        <TextView
-                            android:id="@+id/text_book_author5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Department :"
-                            android:textSize="18sp"
-                            android:layout_margin="10dp" />
-
-                        <TextView
-                            android:id="@+id/edit_book_author3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="IT"
-                            android:hint="Enter book author"
-                            android:layout_margin="10dp" />
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-
-                        <TextView
-                            android:id="@+id/text_book_author3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Contact No. :"
-                            android:textSize="18sp"
-                            android:layout_margin="10dp" />
-
-                        <TextView
-                            android:id="@+id/edit_book_author23"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="8085273680"
-                            android:hint="Enter book author"
-                            android:layout_margin="10dp" />
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"/>
-
-
-
-
-                </LinearLayout>
-
-
-
-
-            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
