--- a/app/src/main/res/layout/activity_faculty_mechnical.xml
+++ b/app/src/main/res/layout/activity_faculty_mechnical.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FacultyActivity">
+    tools:context=".FacultyActivityMechnical">
 
     <Toolbar
         android:layout_width="match_parent"
@@ -67,7 +68,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="Prof. Awanish Kumar Upadhyay "
+                            android:text="Prof. G.K. Agrawal "
                             android:hint="Prof. Himanshu Mokashe "
                             android:layout_margin="10dp" />
 
@@ -92,7 +93,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="Mechanical"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -116,7 +117,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="9893110221"
+                            android:text="9406213464"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -180,7 +181,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="Prof. Himanshu Mokashe "
+                            android:text="Prof. Uday xaxa "
                             android:hint="Prof. Himanshu Mokashe "
                             android:layout_margin="10dp" />
 
@@ -206,7 +207,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="Mechanical"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -231,7 +232,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="8770201998"
+                            android:text="90009151042"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -294,9 +295,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
-                            android:hint="Prof. Samiksha Shukla "
+                            android:hint="Prof. Rishi Shukla "
                             android:inputType="text"
-                            android:text="Prof. Samiksha Shukla "
+                            android:text="Prof. Satish Kumar Gavel "
                             android:textSize="18sp" />
 
                     </LinearLayout>
@@ -321,7 +322,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="IT"
+                            android:text="Mechanical"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -346,7 +347,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:textSize="18sp"
-                            android:text="9770832766"
+                            android:text="9575329918"
                             android:hint="Enter book author"
                             android:layout_margin="10dp" />
 
@@ -372,240 +373,11 @@
 
 
             </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="1.1in"
-                android:layout_margin="7dp"
-                app:cardElevation="5dp"
-                app:cardCornerRadius="8dp"
-                app:cardBackgroundColor="@color/white">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-
-                    >
-
-
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:layout_marginTop="@dimen/_5sdp">
-
-                        <TextView
-                            android:id="@+id/text_book_title121"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Faculty Name :"
-                            android:textSize="18sp"
-                            android:layout_margin="10dp" />
-
-                        <TextView
-                            android:id="@+id/edit_book_title2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="Prof. Priyanka Sahu "
-                            android:hint="Prof. Priyanka Sahu "
-                            android:layout_margin="10dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-
-                        <TextView
-                            android:id="@+id/text_book_author"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Department :"
-                            android:textSize="18sp"
-                            android:layout_margin="10dp" />
-
-                        <TextView
-                            android:id="@+id/edit_book_author2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="IT"
-                            android:hint="Enter book author"
-                            android:layout_margin="10dp" />
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-
-                        <TextView
-                            android:id="@+id/text_book_author2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Contact No. :"
-                            android:textSize="18sp"
-                            android:layout_margin="10dp" />
-
-                        <TextView
-                            android:id="@+id/edit_book_author22"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="7828071147"
-                            android:hint="Enter book author"
-                            android:layout_margin="10dp" />
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"/>
-
-
-
-
-                </LinearLayout>
-
-
-
-
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="1.1in"
-                android:layout_margin="7dp"
-                app:cardElevation="5dp"
-                app:cardCornerRadius="8dp"
-                app:cardBackgroundColor="@color/white">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-
-                    >
-
-
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:layout_marginTop="@dimen/_5sdp">
-
-                        <TextView
-                            android:id="@+id/text_book_title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Faculty Name :"
-                            android:textSize="18sp"
-                            android:layout_margin="10dp" />
-
-                        <TextView
-                            android:id="@+id/edit_book_title3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="Prof. Kunal Kumar "
-                            android:hint="Prof. Kunal Kumar "
-                            android:layout_margin="10dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-
-                        <TextView
-                            android:id="@+id/text_book_author5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Department :"
-                            android:textSize="18sp"
-                            android:layout_margin="10dp" />
-
-                        <TextView
-                            android:id="@+id/edit_book_author3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="IT"
-                            android:hint="Enter book author"
-                            android:layout_margin="10dp" />
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-
-                        <TextView
-                            android:id="@+id/text_book_author3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Contact No. :"
-                            android:textSize="18sp"
-                            android:layout_margin="10dp" />
-
-                        <TextView
-                            android:id="@+id/edit_book_author23"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:textSize="18sp"
-                            android:text="8085273680"
-                            android:hint="Enter book author"
-                            android:layout_margin="10dp" />
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"/>
-
-
-
-
-                </LinearLayout>
-
-
-
-
-            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
 
     </ScrollView>
 
-</LinearLayout>
+  </LinearLayout>
