--- a/app/src/main/res/layout/activity_online_fees_payment.xml
+++ b/app/src/main/res/layout/activity_online_fees_payment.xml
@@ -117,7 +117,7 @@
                                 />
 
                             <Button
-                                android:id="@+id/facultybtn7"
+                                android:id="@+id/onlinefeepay"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
